# aiax-network

./: .gitignore  .gitmodules  .ignore  .prettierrc  CHANGELOG.md  NOTES.md  README.md  TESTNET.md  docker-compose.yml  hardhat.config.js  hints.txt  package-lock.json  package.json  test-accounts.txt  tsconfig.json
contracts/: BackBridge.sol  CosmosToken.sol  ERC20AiaxTestToken.sol  ERC20AiaxToken.sol  ERC20MinterBurner.sol  ERC20TokenOne.sol  Gravity.sol  GravityTest.sol
extra/: .dockerignore  Dockerfile.aiaxd  Dockerfile.bootstrap  Dockerfile.gorc
extra/bootstrap/: Cargo.toml
extra/bootstrap/assets/config/: testnet.yaml
extra/bootstrap/assets/data/aiaxd/config/: client.toml  config.toml
extra/bootstrap/assets/data/gorc/: config.toml
extra/bootstrap/assets/genesis/: testnet.json
extra/bootstrap/src/: config.rs  genesis.rs  main.rs  state.rs  utils.rs  wrappers.rs
src/: aiax.ts  env.ts  gorc.ts  index.ts  init.ts  proc.ts  toml.ts  types.d.ts  utils.ts
src/contract/: deploy.ts  index.ts  utils.ts
src/eth/: index.ts
src/testnode/: index.ts  it.ts
src/tests/: index.ts  test.ts
src/typechain/: BackBridge.d.ts  BackBridgeFactory.ts  CosmosErc20.d.ts  CosmosErc20Factory.ts  Erc20AiaxTestToken.d.ts  Erc20AiaxTestTokenFactory.ts  Erc20AiaxToken.d.ts  Erc20AiaxTokenFactory.ts  Erc20Burnable.d.ts  Erc20BurnableFactory.ts  Erc20Factory.ts  Erc20MinterBurner.d.ts  Erc20MinterBurnerFactory.ts  Erc20TokenOne.d.ts  Erc20TokenOneFactory.ts  Gravity.d.ts  GravityFactory.ts  GravityTest.d.ts  GravityTestFactory.ts  HashingTest.d.ts  HashingTestFactory.ts  (+22 more)
(+44 files in other folders)
